--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
    <header style="max-width: 100%; padding: 20px;">
       <h1 id="headline">Briteway Consulting</h1>
       <p>Every expert starts as a beginner.</p>
-      <p><a href="https://linktr.ee/briteway">Let's Connect</a></p>
+      <p><a href="#">Let's Connect</a></p>
    </header>
    <body>
       <main style="max-width: 100%; padding: 20px;">
